euphony-dsp/src/snapshots/euphony_dsp__osc__Phase.snap
---
source: euphony-dsp/src/osc.rs
expression: node
---
Node {
    name: "Phase",
    module: [
        "osc",
    ],
    impl_path: "euphony_dsp::osc",
    id: 107,
    inputs: [
        Input {
            name: "frequency",
            id: 0,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "phase",
            id: 1,
            trigger: true,
            default: 0.0,
        },
    ],
    docs: "",
}
