euphony-dsp/src/snapshots/euphony_dsp__osc__Sawtooth.snap
---
source: euphony-dsp/src/osc.rs
assertion_line: 125
expression: node
---
Node {
    name: "Sawtooth",
    module: [
        "osc",
    ],
    impl_path: "euphony_dsp::osc",
    id: 104,
    inputs: [
        Input {
            name: "frequency",
            id: 0,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "phase",
            id: 1,
            trigger: true,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " A sawtooth oscillator\n\n # frequency\n\n # phase (trigger)\n",
}
