euphony-dsp/src/snapshots/euphony_dsp__osc__Silence.snap
---
source: euphony-dsp/src/osc.rs
expression: node
---
Node {
    name: "Silence",
    module: None,
    impl_path: "euphony_dsp::osc",
    id: 106,
    inputs: [],
    docs: "",
}
