euphony-dsp/src/snapshots/euphony_dsp__osc__Sine.snap
---
source: euphony-dsp/src/osc.rs
assertion_line: 101
expression: node
---
Node {
    name: "Sine",
    module: [
        "osc",
    ],
    impl_path: "euphony_dsp::osc",
    id: 100,
    inputs: [
        Input {
            name: "frequency",
            id: 0,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "phase",
            id: 1,
            trigger: true,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Accurate (slow) sine oscillator\n\n # frequency\n\n # phase (trigger)\n",
}
