euphony-dsp/src/snapshots/euphony_dsp__osc__SineFast.snap
---
source: euphony-dsp/src/osc.rs
expression: node
---
Node {
    name: "SineFast",
    module: [
        "osc",
    ],
    impl_path: "euphony_dsp::osc",
    id: 101,
    inputs: [
        Input {
            name: "frequency",
            id: 0,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "phase",
            id: 1,
            trigger: true,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Mostly accurate, but faster sine oscillator\n\n # frequency\n\n # phase (trigger)\n",
    fork: None,
}
