euphony-dsp/src/snapshots/euphony_dsp__osc__SineFaster.snap
---
source: euphony-dsp/src/osc.rs
expression: node
---
Node {
    name: "SineFaster",
    module: [
        "osc",
    ],
    impl_path: "euphony_dsp::osc",
    id: 102,
    inputs: [
        Input {
            name: "frequency",
            id: 0,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "phase",
            id: 1,
            trigger: true,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Less accurate, but fast sine oscillator\n\n # frequency\n\n # phase (trigger)\n",
    fork: None,
}
