euphony-dsp/src/snapshots/euphony_dsp__osc__Triangle.snap
---
source: euphony-dsp/src/osc.rs
expression: node
---
Node {
    name: "Triangle",
    module: [
        "osc",
    ],
    impl_path: "euphony_dsp::osc",
    id: 105,
    inputs: [
        Input {
            name: "frequency",
            id: 0,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "phase",
            id: 1,
            trigger: true,
            default: 0.75,
        },
    ],
    buffers: [],
    docs: " A triangle oscillator\n\n # frequency\n\n # phase (trigger)\n",
    fork: None,
}
